# quam-builder

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DONOR_SPIN_QUBIT_PLAN.md  PLAN_mixin_improvements.md  PR_SUMMARY_SHORT.md  README.md  Randomized_Benchmarking.md  WIRING_CHANGES.md  __init__.py  conftest.py  debug_ghz_program.py  mkdocs.yml  publish-package.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-catalog-registration/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-test-coverage/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-operationsregistry-clarification/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-customer-documentation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: state.json
docs/: index.md
docs/api/: architecture.md  builder.md  index.md  tools.md
docs/guides/: index.md  pylint_plugin.md  quantum_dots.md  superconducting.md  voltage_sequence.md
docs/superpowers/plans/: 2026-04-15-xy-drive-frequency-model.md
docs/superpowers/specs/: 2026-04-15-xy-drive-frequency-model-design.md
pylint_qua_plugin/: INTEGRATION_GUIDE.md  README.md  __init__.py  pylint_qua_plugin.py
quam_builder/: iqcc_adapter.py
quam_builder/architecture/neutral_atoms/: README.md  atom.py  base_quam_na.py
quam_builder/architecture/nv_center/: __init__.py
quam_builder/architecture/quantum_dots/: README.md  __init__.py  defaults.py  exceptions.py  gate_set.py  init_macro.py  init_macro_improved.py  macro_examples.py  operations.py  quam_ld_example.py  quam_ld_generator_example.py  quam_qd_example.py  quam_qd_generator_example.py  utils.py  virtual_gate_set.py  virtualisation_layer.py  voltage_gate.py
quam_builder/architecture/superconducting/: README.md  __init__.py
quam_builder/builder/nv_center/: add_default_pulses.py  add_nv_drive_component.py  add_nv_laser_component.py  add_nv_spcm_component.py  build_quam.py  pulses.py
quam_builder/builder/quantum_dots/: pulses.py  (+11 more)
quam_builder/common/: __init__.py  pulses.py
quam_builder/hardware/: quam_channel.py
quam_builder/tools/: __init__.py  import_utils.py  power_tools.py  qua_tools.py
quam_state/: state.json  wiring.json
tests/: conftest.py  test_build_quam_wiring.py  test_builder_cavity.py  test_components_readout_resonator.py  test_create_analog_ports.py  test_create_wiring.py  test_create_wiring_cavity.py  test_e2e_quam_construction.py  test_modify_quam.py  test_qpu_fixed_frequency_single_cavity.py  test_qubit_base_transmon.py  test_qubit_bosonic_mode.py  test_sequence_state_tracker.py  test_twpa_initialize.py  test_twpa_keepalive.py  test_utils.py
tests/builder/: test_e2e_quantum_dots.py
tests/macros/: conftest.py  test_macro_classes.py  test_macro_fluent_api.py
tests/neutral_atoms/: architecture_demo.py
tests/pylint_plugin/: __init__.py  sample_qua_file.py  test_pylint_qua_plugin.py
tests/quantum_dots/: STICKY_VOLTAGE_TRACKING_README.md  conftest.py  test_build_quam.py  test_builder_components.py  test_builder_pulses.py  test_macro_classes.py  test_macro_fluent_api.py  test_stage_workflow_persistence.py  test_sticky_voltage_tracking.py  test_voltage_point_macro_methods.py  test_wirer_builder_integration.py
tests/virtual_gates/: conftest.py  test_virtual_gates.py  test_virtual_voltage_sequence.py  test_virtualisation_layer.py
tests/voltage_gate_sequence/: conftest.py  test_gate_set.py  test_sequence_state_tracker.py  test_voltage_gate_sequence.py  test_voltage_sequence.py  utils.py
tests/voltage_sequence/: conftest.py  test_gate_set.py  test_sequence_state_tracker.py  test_voltage_sequence.py
tests_against_server/: conftest.py
tests_against_server/voltage_gate_sequence/: conftest.py  test_attenuation_amplified.py  test_compensation_ramps.py  test_saas_smoke.py  test_square_pulses.py  validation_utils.py
tutorials/: README.md  calibration_workflow.ipynb  macro_customization.ipynb
utils/: instrument_limits.py
(+287 files in other folders)
